Bug #892898 arm64: dts: sprd: change the property type from bool to u32 for dsi mode
[root cause  ] the bool property can not be overrode in board dts
[changes     ] lcd dtsi
[side effects] none
[self test   ]:
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp9863a-1h10
[test case]:launcher display ok
[reviewers   ] kevin.tang thomas.chai
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Because the bool property can not be overrode in board dts, that
we can not modify the dsi work mode in different boards for the
same lcd dtsi. So change the property type from bool to u32 in
lcd dtsi.

Change-Id: I2249383121d2a0e521f31448643e2b155a259494
Signed-off-by: Leon He <leon.he@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/lcd/lcd_nt35695_truly_mipi_fhd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_nt35695_truly_mipi_fhd.dtsi
@@ -9,7 +9,7 @@
 / { lcds {
 	lcd_nt35695_truly_mipi_fhd: lcd_nt35695_truly_mipi_fhd {
 
-		sprd,dsi-video-burst-mode;
+		sprd,dsi-work-mode = <1>; /* video burst mode*/
 		sprd,dsi-lane-number = <4>;
 		sprd,dsi-color-format = "rgb888";
 
