--- a/arch/arm64/boot/dts/sprd/lcd/lcd_nt35597_boe_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_nt35597_boe_mipi_hd.dtsi
@@ -9,7 +9,7 @@
 / { lcds {
 	lcd_nt35597_boe_mipi_hd: lcd_nt35597_boe_mipi_hd {
 
-		sprd,dsi-video-burst-mode;
+		sprd,dsi-work-mode = <1>; /* video burst mode*/
 		sprd,dsi-lane-number = <4>;
 		sprd,dsi-color-format = "rgb888";
 
