Bug #1083123 devfreq: sprd: add ext vote
[root cause ] ext vote can vote without sipc to cm4
[changes ] drivers/devfreq/sprd/sprd_dfs_vote_ums512.c
[side effects] no
[self test ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: sharkl5pro-1h10
[test case]: power up/sysfs read
[reviewers ] junqiang.wang
[change_type ] feature
[tag_product ] common

sharkl5pro can vote from kernel without sipc to cm4
roc1 will have this feature later
Test: echo to sysfs

Change-Id: I45a38aa7a54d238bd7e603f5eb85b876c4c1df1c
Signed-off-by: mingmin.ling <mingmin.ling@unisoc.com>

--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -3542,6 +3542,9 @@ CONFIG_DEVFREQ_GOV_SPRD_SCENE=y
 # DEVFREQ Drivers
 #
 CONFIG_DEVFREQ_SPRD_AUTO_DFS=y
+CONFIG_DEVFREQ_SPRD_EXT_VOTE=y
+CONFIG_DEVFREQ_SPRD_EXT_VOTE_UMS512=y
+# CONFIG_DEVFREQ_SPRD_EXT_VOTE_ROC1 is not set
 CONFIG_SPRD_TOP_DVFS_DEVFREQ=y
 CONFIG_SPRD_APSYS_DVFS_DEVFREQ=y
 # CONFIG_PM_DEVFREQ_EVENT is not set
