--- a/arch/arm64/configs/sprd_sharkl3_defconfig
+++ b/arch/arm64/configs/sprd_sharkl3_defconfig
@@ -3535,6 +3535,7 @@ CONFIG_DEVFREQ_GOV_SPRD_SCENE=y
 # DEVFREQ Drivers
 #
 CONFIG_DEVFREQ_SPRD_AUTO_DFS=y
+# CONFIG_DEVFREQ_SPRD_EXT_VOTE is not set
 # CONFIG_SPRD_TOP_DVFS_DEVFREQ is not set
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
