Bug #1065627 arm64: Dts: add nandc node
[root cause  ] porting slc nand driver of r6p0 for orca cpe board
[changes     ] dts files
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:yes
[board]:udx710-3h10
[test case]:nand case
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] specific

Add orca sprd-nandc node in DTS

Change-Id: I90cb64cf260a9a28ef13e001e7b1268b9b3b96dc
Signed-off-by: Shuiqing Li <shuiqing.li@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/orca.dtsi
+++ b/arch/arm64/boot/dts/sprd/orca.dtsi
@@ -213,6 +213,13 @@
 				clocks = <&apahb_gate CLK_DMA_EB>;
 			};
 
+			nandc: nand-controller@21300000 {
+				compatible = "sprd,orca-nandc";
+				reg = <0 0x21300000 0 0x1000>;
+				interrupts = <GIC_SPI 59 IRQ_TYPE_LEVEL_HIGH>;
+				status = "disabled";
+			};
+
 			sdio3: sdio@26100000 {
 				compatible = "sprd,sdhc-r11p1";
 				reg = <0 0x26100000 0 0x1000>;
