Bug #1067476 arm: dts: Add sc2721 rgulator related configs for kernel4.14
[root cause  ] Add sc2721 rgulator related configs for kernel4.14
[changes     ] Add sc2721 rgulator related configs for kernel4.14
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: sp9832e_1h10
[test case]: normal boot
[reviewers   ] erick.chen
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add sc2721 rgulator related configs for kernel4.14

Change-Id: Ifc6852ac12febdd88291dd72c2266209586460a6
Signed-off-by: Sherry Zong <sherry.zong@unisoc.com>

--- a/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
@@ -9,6 +9,7 @@
 
 #include "sc9832e.dtsi"
 #include "sp9832e-go-mach.dtsi"
+#include "sc2721.dtsi"
 
 / {
 	model = "Spreadtrum SP9832E-1H10-GOFU Board";
