Bug #1067476 arm: configs: Enable SC2721 regulator module for Sharkle
[root cause  ] Enable sc2721 driver for sharkle
[changes     ] Enable sc2721 driver for sharkle
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: sp9832e_1h10_gofu
[test case]: normal boot
[reviewers   ] erick.chen
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Enable SC2721 regulator module for Sharkle paltform.

Change-Id: I05e913187502aed3506771877e6e9651d05325f0
Signed-off-by: Sherry Zong <sherry.zong@unisoc.com>

--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -2232,7 +2232,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_PWM is not set
 # CONFIG_REGULATOR_SC2731 is not set
 # CONFIG_REGULATOR_SC2720 is not set
-# CONFIG_REGULATOR_SC2721 is not set
+CONFIG_REGULATOR_SC2721=y
 # CONFIG_REGULATOR_SC2730 is not set
 # CONFIG_REGULATOR_TPS51632 is not set
 # CONFIG_REGULATOR_TPS62360 is not set
