Bug #1062893 soc: sprd: modem: Add crypto soft algorithm for modem
[root cause  ] Modem doesn't support crypto soft algorithm
[changes     ] Add crypto soft algorithm for modem
[side effects] none
[self test   ]:power on
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:none
[board]:roc1
[test case]:none
[reviewers   ] shijiu.ren allen.zhang
[change_type ] feature
[tag_product ] common

Add defconfig consistence fix when cherry-picking from stable to
trunk.

Change-Id: Ibe01b781c4a3ceee8b505a8b654ae5ce5c0e8b24
Signed-off-by: guozhu.xing <guozhu.xing@unisoc.com>
Signed-off-by: Orson Zhai <orson.zhai@spreadtrum.com>

--- a/arch/arm64/configs/sprd_sharkl5_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5_defconfig
@@ -3491,6 +3491,7 @@ CONFIG_SPRD_HW_DEVICE_DVFS_CP=y
 # CONFIG_SPRD_MODEM_LOADER is not set
 # CONFIG_SPRD_CRYPTO is not set
 # CONFIG_SPRD_CRYPTO_TEST is not set
+# CONFIG_SPRD_CRYPTO_SW is not set
 # CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 CONFIG_SPRD_MM_PW_DOMAIN_R6P0=y
 # CONFIG_SPRD_CAM_PW_DOMAIN_R5P0 is not set
