--- a/drivers/soc/sprd/modem/crypto/Kconfig
+++ b/drivers/soc/sprd/modem/crypto/Kconfig
@@ -12,3 +12,9 @@ config SPRD_CRYPTO_TEST
 	default n
 	help
 	  The Testing option of spreadtrum crypto driver for verifying modem image.
+
+config SPRD_CRYPTO_SW
+	tristate "The Soft Crypto option of Spreadtrum Crypto Driver"
+	default n
+	help
+	  The Testing option of spreadtrum crypto driver for verifying modem image.
