--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -3244,6 +3244,7 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_SPRD_IQ is not set
 # CONFIG_SPRD_MCD is not set
 # CONFIG_SPRD_MODEM_LOADER is not set
+# CONFIG_SPRD_CRYPTO_SW is not set
 # CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 # CONFIG_SPRD_MM_PW_DOMAIN_R6P0 is not set
 # CONFIG_SPRD_CAM_PW_DOMAIN_R5P0 is not set
