--- a/arch/arm64/configs/sprd_minimum_defconfig
+++ b/arch/arm64/configs/sprd_minimum_defconfig
@@ -1608,6 +1608,7 @@ CONFIG_CLKSRC_VERSATILE=y
 # CONFIG_SPRD_MODEM_LOADER is not set
 # CONFIG_SPRD_CRYPTO is not set
 # CONFIG_SPRD_CRYPTO_TEST is not set
+# CONFIG_SPRD_CRYPTO_SW is not set
 # CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 # CONFIG_SPRD_MM_PW_DOMAIN_R6P0 is not set
 # CONFIG_SPRD_CAM_PW_DOMAIN_R5P0 is not set
