Bug #1062893 soc: sprd: modem: Crypto algo performance test for modem
[root cause  ] Lack the crypto algorithm performance test
[changes     ] Add crypto algorithm performance test for modem
[side effects] none
[self test   ]:power on
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:none
[board]:roc1
[test case]:power on
[reviewers   ] shijiu.ren allen.zhang
[change_type ] feature
[tag_product ] common

Change-Id: Ie2d456ef11f2f1d17adab2f886e1cb217441a02d
Signed-off-by: guozhu.xing <guozhu.xing@unisoc.com>

--- a/drivers/soc/sprd/modem/crypto/Kconfig
+++ b/drivers/soc/sprd/modem/crypto/Kconfig
@@ -13,6 +13,13 @@ config SPRD_CRYPTO_TEST
 	help
 	  The Testing option of spreadtrum crypto driver for verifying modem image.
 
+config SPRD_CRYPTO_PERFORMANCE_TEST
+	tristate "The Performance Testing option of Spreadtrum Crypto Driver"
+	depends on SPRD_CRYPTO_TEST
+	default n
+	help
+	  The Testing option of spreadtrum crypto driver for verifying modem image.
+
 config SPRD_CRYPTO_SW
 	tristate "The Soft Crypto option of Spreadtrum Crypto Driver"
 	default n
