Bug #1073066 arm: configs: open RTC config macros
[root cause  ] open RTC config macros
[changes     ] open RTC config macros
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: pike2
[test case]: N/A
[reviewers   ] bruce.chen
[change_type ] new feature
[tag_product ] common

open pike2 RTC config macros

Change-Id: Ieaa0f107fa16f0e5b4919571bc742db1fd56e7cb
Signed-off-by: Xiaopeng Bai <xiaopeng.bai@unisoc.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -2845,7 +2845,7 @@ CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
 CONFIG_RTC_SYSTOHC=y
 CONFIG_RTC_SYSTOHC_DEVICE="rtc0"
 # CONFIG_RTC_DEBUG is not set
-CONFIG_RTC_NVMEM=y
+# CONFIG_RTC_NVMEM is not set
 
 #
 # RTC interfaces
@@ -2929,7 +2929,7 @@ CONFIG_RTC_I2C_AND_SPI=y
 # CONFIG_RTC_DRV_BQ4802 is not set
 # CONFIG_RTC_DRV_RP5C01 is not set
 # CONFIG_RTC_DRV_V3020 is not set
-# CONFIG_RTC_DRV_SC27XX is not set
+CONFIG_RTC_DRV_SC27XX=y
 # CONFIG_RTC_DRV_ZYNQMP is not set
 
 #
