Bug #1079939 arm: dts: add i2c driver for sharkle
[root cause  ] add i2c driver
[changes     ] add i2c dts
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sharkle
[test case]:i2c case
[reviewers   ]xingxing.luo
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add the i2c driver for sharkle

Change-Id: Ia2ef6ef3278e1e3b100598dd9c379ee8bb284497
Signed-off-by: Chris Wu <chris.wu@unisoc.com>

--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -13,6 +13,11 @@
 
 	aliases {
 		serial1 = &uart1;
+		i2c0 = &i2c0;
+		i2c1 = &i2c1;
+		i2c2 = &i2c2;
+		i2c3 = &i2c3;
+		i2c4 = &i2c4;
 	};
 
 	soc: soc {
@@ -157,6 +162,56 @@
 				clocks = <&ap_clk CLK_EMMC_2X >,
 					 <&rpll CLK_RPLL_390M>,
 					 <&apahb_gate EMMC_EB>;
+				status = "disabled";
+			};
+
+			i2c0: i2c@70500000 {
+				compatible = "sprd,sharkle-i2c";
+				reg = <0 0x70500000 0 0x100>;
+				interrupts = <GIC_SPI 11 IRQ_TYPE_LEVEL_HIGH>;
+				clock-frequency = <100000>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				status = "disabled";
+			};
+
+			i2c1: i2c@70600000 {
+				compatible = "sprd,sharkle-i2c";
+				reg = <0 0x70600000 0 0x100>;
+				interrupts = <GIC_SPI 12 IRQ_TYPE_LEVEL_HIGH>;
+				clock-frequency = <100000>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				status = "disabled";
+			};
+
+			i2c2: i2c@70700000 {
+				compatible = "sprd,sharkle-i2c";
+				reg = <0 0x70700000 0 0x100>;
+				interrupts = <GIC_SPI 13 IRQ_TYPE_LEVEL_HIGH>;
+				clock-frequency = <100000>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				status = "disabled";
+			};
+
+			i2c3: i2c@70800000 {
+				compatible = "sprd,sharkle-i2c";
+				reg = <0 0x70800000 0 0x100>;
+				interrupts = <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>;
+				clock-frequency = <400000>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				status = "disabled";
+			};
+
+			i2c4: i2c@70900000 {
+				compatible = "sprd,sharkle-i2c";
+				reg = <0 0x70900000 0 0x100>;
+				interrupts = <GIC_SPI 15 IRQ_TYPE_LEVEL_HIGH>;
+				clock-frequency = <100000>;
+				#address-cells = <1>;
+				#size-cells = <0>;
 				status = "disabled";
 			};
 		};
