Bug #1081622 - arm: dts: Add sharkle clock dts
[root cause  ] Add sharkle clock dts
[changes     ] Add sharkle clock dts
[side effects]none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:yes
[confirm dependent commit]:yes
[board]:sharkl3
[test case]:build ok
[reviewers   ] ben.li
[change_type ] feature_bugfix
[tag_product ] common

Add sharkle clock dts

Change-Id: I81b187da3f6b243b4fd9b032288a5a1dea578ffd
Signed-off-by: Laura Yu <laura.yu@unisoc.com>

--- a/arch/arm/boot/dts/sc9832e.dtsi
+++ b/arch/arm/boot/dts/sc9832e.dtsi
@@ -5,7 +5,7 @@
  *
  * This file is licensed under a dual GPLv2 or X11 license.
  */
-
+#include <dt-bindings/clock/sprd,sc9832e-clk.h>
 #include "sharkle.dtsi"
 
 / {
@@ -80,5 +80,100 @@
 		interrupts = <GIC_PPI 14 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>,
 			     <GIC_PPI 10 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>;
 		clock-frequency = <26000000>;
+	};
+
+	soc {
+		pmu_gate: pmu-gate {
+			compatible = "sprd,sc9832e-pmu-gate";
+			sprd,syscon = <&pmu_apb_regs>; /* 0x402b0000 */
+			clocks = <&ext_26m>;
+			#clock-cells = <1>;
+		};
+
+		pll: pll {
+			compatible = "sprd,sc9832e-pll";
+			sprd,syscon = <&anlg_phy_g1_regs>; /* 0x403c0000 */
+			clocks = <&pmu_gate CLK_ISPPLL_GATE>;
+			#clock-cells = <1>;
+		};
+
+		dpll: dpll {
+			compatible = "sprd,sc9832e-dpll";
+			sprd,syscon = <&anlg_phy_g2_regs>; /* 0x403d0000 */
+			clocks = <&pmu_gate CLK_DPLL_GATE>;
+			#clock-cells = <1>;
+		};
+
+		mpll: mpll {
+			compatible = "sprd,sc9832e-mpll";
+			sprd,syscon = <&anlg_phy_g4_regs>; /* 0x403f0000 */
+			clocks = <&pmu_gate CLK_MPLL_GATE>;
+			#clock-cells = <1>;
+		};
+
+		rpll: rpll {
+			compatible = "sprd,sc9832e-rpll";
+			sprd,syscon = <&anlg_phy_g6_regs>; /* 0x40410000 */
+			clocks = <&ext_26m>;
+			#clock-cells = <1>;
+		};
+
+		ap_clk: clock-controller@21500000 {
+			compatible = "sprd,sc9832e-ap-clks"; /* 0x21500000 */
+			reg = <0x21500000 0x1000>;
+			clocks = <&ext_26m>, <&pll CLK_TWPLL>,
+				 <&rpll CLK_RPLL>;
+			#clock-cells = <1>;
+		};
+
+		aonapb_gate: aonapb-gate {
+			compatible = "sprd,sc9832e-aonapb-gate"; /* 0x402e0000 */
+			sprd,syscon = <&aon_apb_regs>;
+			clocks = <&aon_prediv CLK_AON_APB>;
+			#clock-cells = <1>;
+		};
+
+		aon_prediv: clock-controller@402d0000 {
+			compatible = "sprd,sc9832e-aon-prediv"; /* 0x402d0000 */
+			reg = <0x402d0000 0x1000>;
+			clocks = <&ext_26m>, <&pll CLK_TWPLL>,
+				 <&rpll CLK_RPLL>, <&ap_clk CLK_AP_APB>;
+			#clock-cells = <1>;
+		};
+
+		gpu_clk: clock-controller@60100000 {
+			compatible = "sprd,sc9832e-gpu-clk";
+			reg = <0x60100000 0x1000>; /* 0x60100000 */
+			clocks = <&ext_26m>;
+			#clock-cells = <1>;
+		};
+
+		mm_gate: mm-gate {
+			compatible = "sprd,sc9832e-mm-gate";
+			sprd,syscon = <&mm_ahb_regs>; /* 0x60d00000 */
+			clocks = <&aonapb_gate CLK_MM_EB>;
+			#clock-cells = <1>;
+		};
+
+		mm_clk: clock-controller@60e00000 {
+			compatible = "sprd,sc9832e-mm-clk";
+			reg = <0x60e00000 0x1000>; /* 0x60e00000 */
+			clocks = <&aon_prediv CLK_MM_AHB>;
+			#clock-cells = <1>;
+		};
+
+		apahb_gate: apahb-gate {
+			compatible = "sprd,sc9832e-apahb-gate";
+			sprd,syscon = <&ap_ahb_regs>; /* 0x20e00000 */
+			clocks = <&aon_prediv CLK_AP_AXI>;
+			#clock-cells = <1>;
+		};
+
+		apapb_gate: apapb-gate {
+			compatible = "sprd,sc9832e-apapb-gate";
+			sprd,syscon = <&ap_apb_regs>; /* 0x71300000 */
+			clocks = <&ext_26m>;
+			#clock-cells = <1>;
+		};
 	};
 };
