--- a/arch/arm64/boot/dts/sprd/ud710-3h10-modem.dtsi
+++ b/arch/arm64/boot/dts/sprd/ud710-3h10-modem.dtsi
@@ -34,7 +34,7 @@
 					<&aon_apb_regs 0xff 0x0>;
 			syscon-names = "shutdown", "deepsleep", "corereset",
 						"sysreset", "getstatus";
-			reg = <0x0 0x800000 0x0 0x3b000>;
+			reg = <0x0 0x800000 0x0 0x40000>;
 			#address-cells = <1>;
 			#size-cells = <1>;
 			/* segnr=1 */
