--- a/arch/arm64/boot/dts/sprd/ums312-modem.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums312-modem.dtsi
@@ -35,7 +35,7 @@
 					<&pmu_apb_regs 0xb0 0xc000>;
 			syscon-names = "shutdown", "deepsleep", "corereset",
 						"sysreset", "getstatus", "dspreset";
-			reg = <0x0 0x800000 0x0 0x3b000>;
+			reg = <0x0 0x800000 0x0 0x40000>;
 			#address-cells = <1>;
 			#size-cells = <1>;
 			/* segnr=1 */
