Bug #1069126 arm: dts: Add thermal/efuse device node
[root cause  ] project need
[changes     ] modify dts
[side effects] no
[self test   ]: build ok
[download normally]: ok
[power on/off normally]: ok
[do common repository/branch inspection]: no
[is there dependence]: no
[confirm dependent commit]: no
[board]: sharkle
[test case]: build ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add thermal/efuse/adc device node for sharkle

Change-Id: I3c1b03121ddb59b8584a35b611ba56acf3077496
Signed-off-by: Freeman Liu <freeman.liu@spreadtrum.com>

--- a/arch/arm/boot/dts/sc2721.dtsi
+++ b/arch/arm/boot/dts/sc2721.dtsi
@@ -17,6 +17,33 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
+		efuse@300 {
+			compatible = "sprd,sc27xx-efuse", "sprd,sc2721-efuse";
+			reg = <0x300>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			hwlocks = <&hwlock 12>;
+
+			adc_bcal: calib@24 {
+				reg = <0x24 0x2>;
+			};
+
+			adc_scal: calib@26 {
+				reg = <0x26 0x2>;
+			};
+		};
+
+		pmic_adc: adc@400 {
+			compatible = "sprd,sc27xx-adc", "sprd,sc2721-adc";
+			reg = <0x400>;
+			interrupt-parent = <&sc2721_pmic>;
+			interrupts = <0 IRQ_TYPE_LEVEL_HIGH>;
+			#io-channel-cells = <1>;
+			hwlocks = <&hwlock 4>;
+			nvmem-cells = <&adc_bcal>, <&adc_scal>;
+			nvmem-cell-names = "big_scale_calib", "small_scale_calib";
+		};
+
 		power-controller@c00 {
 			compatible = "sprd,sc27xx-regulator", "sprd,sc2721-regulator";
 
