--- a/arch/arm/boot/dts/sp9832e-go-mach.dtsi
+++ b/arch/arm/boot/dts/sp9832e-go-mach.dtsi
@@ -7,4 +7,19 @@
  */
 
 / {
+
+	thm_zone: thermal-zones {
+
+		cpu_thmzone: cpu-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+			thermal-sensors = <&cpu_thm 1>;
+		};
+
+		gpu_thmzone: gpu-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+			thermal-sensors = <&gpu_thm 0>;
+		};
+	};
 };
